--- a/package.json
+++ b/package.json
@@ -13,8 +13,21 @@
   "devDependencies": {
     "@types/node": "20.11.30",
     "@types/react": "^18.2.72",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwindcss": "^3.4.2",
     "typescript": "5.4.3"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "plugins": ["prettier-plugin-taildwindcss"],
+    "tailwindConfig": "./tailwinnd.config.js"
   }
 }
