--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "strictNullChecks": true,
     "plugins": [
       {
         "name": "next"
