--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "next": "^14.1.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^5.1.0"
+        "react-icons": "^5.1.0",
+        "react-loading-icons": "^1.1.0",
+        "react-visibility-sensor": "^5.1.1"
     },
     "devDependencies": {
         "@types/node": "20.11.30",
