--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "name": "digital-madness",
+    "homepage": "http://digital-madness.in",
+    "version": "0.1.0",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -32,6 +35,8 @@
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
+        "serve": "^14.2.1",
+        "sharp": "^0.33.3",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.3"
     },
