--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.34.1",
+        "gray-matter": "^4.0.3",
         "husky": "^9.0.11",
+        "markdown-to-jsx": "^7.4.7",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
