--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
         "react-dom": "^18.2.0",
         "react-icons": "^5.1.0",
         "react-loading-icons": "^1.1.0",
-        "react-visibility-sensor": "^5.1.1"
+        "react-markdown": "^9.0.1",
+        "react-syntax-highlighter": "^15.5.0",
+        "react-visibility-sensor": "^5.1.1",
+        "rehype-autolink-headings": "^7.1.0",
+        "rehype-sanitize": "^6.0.0",
+        "rehype-slug": "^6.0.0",
+        "remark-gfm": "^4.0.0",
+        "remark-linkify-regex": "^1.2.1"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.12",
         "@types/node": "20.11.30",
         "@types/react": "^18.2.72",
+        "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "autoprefixer": "^10.4.19",
         "concurrently": "^8.2.2",
@@ -31,6 +40,7 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.34.1",
+        "gray-matter": "^4.0.3",
         "husky": "^9.0.11",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
