--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
         "react-syntax-highlighter": "^15.5.0",
         "react-visibility-sensor": "^5.1.1",
         "rehype-autolink-headings": "^7.1.0",
+        "rehype-katex": "^7.0.0",
         "rehype-sanitize": "^6.0.0",
         "rehype-slug": "^6.0.0",
         "remark-gfm": "^4.0.0",
-        "remark-linkify-regex": "^1.2.1"
+        "remark-linkify-regex": "^1.2.1",
+        "remark-math": "^6.0.0"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.12",
