--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     },
     "dependencies": {
         "next": "^14.1.4",
+        "plotly.js": "^2.33.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.1.0",
         "react-loading-icons": "^1.1.0",
         "react-markdown": "^9.0.1",
+        "react-plotly.js": "^2.6.0",
         "react-syntax-highlighter": "^15.5.0",
         "react-visibility-sensor": "^5.1.1",
         "rehype-autolink-headings": "^7.1.0",
@@ -29,7 +31,9 @@
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.12",
         "@types/node": "20.11.30",
+        "@types/plotly.js": "^2.29.5",
         "@types/react": "^18.2.72",
+        "@types/react-plotly.js": "^2.6.3",
         "@types/react-syntax-highlighter": "^15.5.11",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "autoprefixer": "^10.4.19",
